# crewai-business-model

model_bot/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
model_bot/config/: shared_config.yaml
model_bot/src/model_bot/: crew.py  main.py
myenv/: pyvenv.cfg
