[project]
name = "model_bot"
version = "0.1.0"
description = "model-bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
model_bot = "model_bot.main:run"
run_crew = "model_bot.main:run"
train = "model_bot.main:train"
replay = "model_bot.main:replay"
test = "model_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
